--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-vue": "^8.0.3",
     "jest": "^27.0.5",
     "lint-staged": "^11.1.2",
+    "node-sass": "^7.0.3",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
     "ts-jest": "^27.0.4",
