--- a/backend/package.json
+++ b/backend/package.json
@@ -21,9 +21,11 @@
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
-    "mongoose": "^5.12.12",
+    "mongoose": "^6.9.1",
     "passport": "^0.4.1",
     "passport-auth": "^0.1.4",
     "passport-jwt": "^4.0.0",
