--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -17,6 +17,9 @@
       "webpack-env",
       "jest"
     ],
+    "typeRoots": [
+      "node_modules/@types", "types"
+    ],
     "paths": {
       "@/*": [
         "src/*"
