--- a/backend/package.json
+++ b/backend/package.json
@@ -25,12 +25,14 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^6.2.1",
     "mongoose": "^6.9.1",
     "passport": "^0.4.1",
     "passport-auth": "^0.1.4",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
+    "swagger-ui-express": "^4.6.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
