--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.8.3",
     "firebase": "^9.17.1",
+    "infinite-loading-vue3-ts": "^1.0.5",
     "material-icons": "^1.10.7",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
