--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,13 @@ jobs:
       # github repository에서 checkout
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Generate Environment Variables File for Production
+        run: |
+          echo "MONGO_URI=$MONGO_URI" >> .env
+          echo "NODE_ENV=$NODE_ENV" >> .env
+        env:
+          MONGO_URI: ${{ secrets.MONGO_URI }}
+          NODE_ENV: ${{ secrets.NODE_ENV }}
       # docker build 수행
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
