--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,10 +23,13 @@ jobs:
       - name: Generate Environment Variables File for Production
         run: |
           echo "MONGO_URI=$MONGO_URI" >> .env
-          echo "NODE_ENV=$NODE_ENV" >> .env
+          echo "NODE_ENV=$NODE_ENV_PRD" >> .env
+          echo "MONGO_URI=$MONGO_URI" >> .env.dev
+          echo "NODE_ENV=$NODE_ENV_DEV" >> .env.dev
         env:
           MONGO_URI: ${{ secrets.MONGO_URI }}
-          NODE_ENV: ${{ secrets.NODE_ENV }}
+          NODE_ENV_PRD: ${{ secrets.NODE_ENV_PRD }}
+          NODE_ENV_DEV: ${{ secrets.NODE_ENV_DEV }}
       # docker build 수행
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
