--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,10 +26,10 @@ jobs:
           NODE_ENV_PRD: ${{ secrets.NODE_ENV_PRD }}
           NODE_ENV_DEV: ${{ secrets.NODE_ENV_DEV }}
         run: |
-          echo MONGO_URI="$MONGO_URI" >> .env
-          echo NODE_ENV="$NODE_ENV_PRD" >> .env
-          echo MONGO_URI="$MONGO_URI" >> .env.dev
-          echo NODE_ENV="$NODE_ENV_DEV" >> .env.dev
+          echo MONGO_URI={{ env.MONGO_URI }} >> .env
+          echo NODE_ENV={{ env.NODE_ENV_PRD }} >> .env
+          echo MONGO_URI={{ env.MONGO_URI }} >> .env.dev
+          echo NODE_ENV={{ env.NODE_ENV_DEV }} >> .env.dev
       # docker build 수행
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
