--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,16 +20,8 @@ jobs:
       # github repository에서 checkout
       - name: Checkout
         uses: actions/checkout@v2
-      # docker build 수행
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      # docker hub 로그인
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USER }}
-          password: ${{ secrets.DOCKER_PWD }}
       - name: Generate Environment Variables File for Production
+        shell: bash
         env:
           MONGO_URI: ${{ secrets.MONGO_URI }}
           NODE_ENV_PRD: ${{ secrets.NODE_ENV_PRD }}
@@ -41,6 +33,15 @@ jobs:
           echo NODE_ENV={{ env.NODE_ENV_PRD }} >> ../../backend/.env
           echo MONGO_URI={{ env.MONGO_URI }} >> ../../backend/.env.dev
           echo NODE_ENV={{ env.NODE_ENV_DEV }} >> ../../backend/.env.dev
+      # docker build 수행
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      # docker hub 로그인
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PWD }}
       # docker hub 빌드, 푸시
       - name: Build and push
         id: docker_build
