--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,10 +29,10 @@ jobs:
         run: |
           touch ../../backend/.env
           touch ../../backend/.env.dev
-          echo MONGO_URI={{ env.MONGO_URI }} >> ../../backend/.env
-          echo NODE_ENV={{ env.NODE_ENV_PRD }} >> ../../backend/.env
-          echo MONGO_URI={{ env.MONGO_URI }} >> ../../backend/.env.dev
-          echo NODE_ENV={{ env.NODE_ENV_DEV }} >> ../../backend/.env.dev
+          echo MONGO_URI={{ env.MONGO_URI }} >> backend/.env
+          echo NODE_ENV={{ env.NODE_ENV_PRD }} >> backend/.env
+          echo MONGO_URI={{ env.MONGO_URI }} >> backend/.env.dev
+          echo NODE_ENV={{ env.NODE_ENV_DEV }} >> backend/.env.dev
       # docker build 수행
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -42,6 +42,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_PWD }}
+      - run: ls -al
       # docker hub 빌드, 푸시
       - name: Build and push
         id: docker_build
