--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,17 +22,15 @@ jobs:
         uses: actions/checkout@v2
       - run: ls -al
       - name: Generate Environment Variables File for Production
-        env:
-          MONGO_URI: ${{ secrets.MONGO_URI }}
-          NODE_ENV_PRD: ${{ secrets.NODE_ENV_PRD }}
-          NODE_ENV_DEV: ${{ secrets.NODE_ENV_DEV }}
+#        env:
+#          MONGO_URI: ${{ secrets.MONGO_URI }}
+#          NODE_ENV_PRD: ${{ secrets.NODE_ENV_PRD }}
+#          NODE_ENV_DEV: ${{ secrets.NODE_ENV_DEV }}
         run: |
-          touch backend/.env
-          touch backend/.env.dev
-          echo MONGO_URI={{ env.MONGO_URI }} >> backend/.env
-          echo NODE_ENV={{ env.NODE_ENV_PRD }} >> backend/.env
-          echo MONGO_URI={{ env.MONGO_URI }} >> backend/.env.dev
-          echo NODE_ENV={{ env.NODE_ENV_DEV }} >> backend/.env.dev
+          echo "MONGO_URI=${{ env.MONGO_URI }}" >> backend/.env
+          echo "NODE_ENV=${{ env.NODE_ENV_PRD }}" >> backend/.env
+          echo "MONGO_URI=${{ env.MONGO_URI }}" >> backend/.env.dev
+          echo "NODE_ENV=${{ env.NODE_ENV_DEV }}" >> backend/.env.dev
       # docker build 수행
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -42,7 +40,6 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_PWD }}
-      - run: ls -al
       # docker hub 빌드, 푸시
       - name: Build and push
         id: docker_build
