fix (backend): docker run 변수 추가

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
           file: ../../docker/back.Dockerfile
           push: true
           tags: ${{ env.DOCKER_IMAGE }}:0.0.1
-   # 배포 Job
+    # 배포 Job
   deploy:
     needs: build  # build 후에 실행되도록 정의
     name: Deploy
@@ -58,4 +58,4 @@ jobs:
       - name: Docker run
         run: |
           docker stop ${{ env.NAME }} && docker rm ${{ env.NAME }} && docker rmi ${{ env.DOCKER_IMAGE }}:0.0.1
-          docker run -d -p 80:3666 --name ${{ env.NAME }} --restart always ${{ env.DOCKER_IMAGE }}:0.0.1
+          docker run -e MONGO_URI=${{ secrets.MONGO_URI }} NODE_ENV=${{ secrets.NODE_ENV_PRD }} -d -p 80:3666 --name ${{ env.NAME }} --restart always ${{ env.DOCKER_IMAGE }}:0.0.1
