--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,6 +47,8 @@ jobs:
   deploy:
     needs: build  # build 후에 실행되도록 정의
     name: Deploy
+    env:
+      MONGO_URI: ${{ secrets.MONGO_URI }}
     runs-on: [ self-hosted, label-go ] # AWS ./configure에서 사용할 label명
     steps:
       - name: Login to no1recipe
@@ -56,9 +58,6 @@ jobs:
           password: ${{ secrets.DOCKER_PWD }}
       # 3666 -> 80 포트로 수행하도록 지정
       - name: Docker run
-        with:
-          screts: |
-            "MONGO_URI=${{ secrets.MONGO_URI }}"
         run: |
           docker stop ${{ env.NAME }} && docker rm ${{ env.NAME }} && docker rmi ${{ env.DOCKER_IMAGE }}:0.0.1
-          docker run -e MONGO_URI=${{ secrets.MONGO_URI }} -d -p 80:3666 --name ${{ env.NAME }} --restart always ${{ env.DOCKER_IMAGE }}:0.0.1
+          docker run -e MONGO_URI=${{ env.MONGO_URI }} -d -p 80:3666 --name ${{ env.NAME }} --restart always ${{ env.DOCKER_IMAGE }}:0.0.1
