--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,6 @@ on:
 
 # 환경설정
 env:
-  MONGO_URI: ${{ secrets.MONGO_URI }}
   DOCKER_IMAGE: ${{ secrets.DOCKER_USER }}/no1recipe
   VERSION: ${{ github.sha }}
   NAME: no1recipe
@@ -23,7 +22,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Generate Environment Variables File for Production
         run: |
-          echo "MONGO_URI=$MONGO_URI" >> backend/.env
+          echo "MONGO_URI=$MONGO_URI" >> .env
+          cat .env
         env:
           MONGO_URI: ${{ secrets.MONGO_URI }},
       # docker build 수행
@@ -47,8 +47,6 @@ jobs:
   deploy:
     needs: build  # build 후에 실행되도록 정의
     name: Deploy
-    env:
-      MONGO_URI: ${{ secrets.MONGO_URI }}
     runs-on: [ self-hosted, label-go ] # AWS ./configure에서 사용할 label명
     steps:
       - name: Login to no1recipe
@@ -60,4 +58,4 @@ jobs:
       - name: Docker run
         run: |
           docker stop ${{ env.NAME }} && docker rm ${{ env.NAME }} && docker rmi ${{ env.DOCKER_IMAGE }}:0.0.1
-          docker run -e MONGO_URI=${{ env.MONGO_URI }} -d -p 80:3666 --name ${{ env.NAME }} --restart always ${{ env.DOCKER_IMAGE }}:0.0.1
+          docker run -d -p 80:3666 --name ${{ env.NAME }} --restart always ${{ env.DOCKER_IMAGE }}:0.0.1
