--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Generate Environment Variables File for Production
         run: |
-          echo "MONGO_URI=$MONGO_URI" >> backend/.env
-          cat .env
+          echo "MONGO_URI=$MONGO_URI" >> backend/.env .
+          cat backend/.env
         env:
           MONGO_URI: ${{ secrets.MONGO_URI }},
       # docker build 수행
