--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,9 +57,9 @@ jobs:
           password: ${{ secrets.DOCKER_PWD }}
       - name: make .env
         run: |
-          echo "MONGO_URI={{ secrets.MONGO_URI }}" >> backend/.env
+          echo "MONGO_URI={{ secrets.MONGO_URI }}" >> .env
       # 3666 -> 80 포트로 수행하도록 지정
       - name: Docker run
         run: |
-          docker stop ${{ env.NAME }} && docker rm ${{ env.NAME }} && docker pull ${{ env.DOCKER_IMAGE }}:0.0.1
+          docker stop ${{ env.NAME }} && docker rm ${{ env.NAME }} && docker rmi ${{ env.DOCKER_IMAGE }}:0.0.1
           docker run -d -p 80:3666 --name ${{ env.NAME }} --restart always ${{ env.DOCKER_IMAGE }}:0.0.1
