--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,6 @@ env:
   DOCKER_IMAGE: ${{ secrets.DOCKER_USER }}/no1recipe
   VERSION: ${{ github.sha }}
   NAME: no1recipe
-  MONGO_URI: ${{ secrets.MONGO_URI }}
 
 jobs:
   # 빌드 Job
@@ -25,8 +24,9 @@ jobs:
         uses: actions/checkout@v2
       - name: Generate Environment Variables File for Production
         run: |
-          echo "MONGO_URI={{ secrets.MONGO_URI }}" >> backend/.env .
-          cat backend/.env
+          echo "ENV MONGO_URI={{ secrets.MONGO_URI }}" >> docker/back.Dockerfile
+          echo "EXPOSE MONGO_URI={{ secrets.PORT }}" >> docker/back.Dockerfile
+          echo 'CMD ["npm", "run", "start:prod"]' >> docker/back.Dockerfile
       # docker build 수행
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -55,10 +55,6 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_PWD }}
-      - name: make .env
-        run: |
-          echo "MONGO_URI=${{ secrets.MONGO_URI }}" >> .env
-          cat .env
       # 3666 -> 80 포트로 수행하도록 지정
       - name: Docker run
         run: |
