--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,4 +59,6 @@ jobs:
       - name: Docker run
         run: |
           docker stop ${{ env.NAME }} && docker rm ${{ env.NAME }} && docker rmi ${{ env.DOCKER_IMAGE }}:0.0.1
-          docker run -d -p 80:3666 --name ${{ env.NAME }} --restart always ${{ env.DOCKER_IMAGE }}:0.0.1 && docker cp ~/forYourRecipe/backend/.env no1Recipe:backend
+          docker run -d -p 80:3666 --name ${{ env.NAME }} --restart always ${{ env.DOCKER_IMAGE }}:0.0.1
+          docker cp ~/forYourRecipe/backend/.env ${{ env.DOCKER_IMAGE }}:0.0.1
+          docker restart ${{ env.DOCKER_IMAGE }}:0.0.1
