--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,6 +60,6 @@ jobs:
         run: |
           docker stop ${{ env.NAME }} && docker rm ${{ env.NAME }} && docker rmi ${{ env.DOCKER_IMAGE }}:0.0.1
           docker run -d -p 80:3666 --name ${{ env.NAME }} --restart always ${{ env.DOCKER_IMAGE }}:0.0.1
-          docker cp ~/forYourRecipe/backend/.env ${{ env.NAME }}:/.env
+          docker cp ~/forYourRecipe/backend/.env ${{ env.NAME }}:/backend
           docker stop ${{ env.NAME }} && docker start ${{ env.NAME }}
 #          docker restart ${{ env.DOCKER_IMAGE }}:0.0.1
