--- a/backend/package.json
+++ b/backend/package.json
@@ -61,7 +61,8 @@
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.1.1",
     "typescript": "^4.7.4",
-    "@types/multer": "^1.4.7"
+    "@types/multer": "^1.4.7",
+    "aws-sdk": "^2.1048.0"
   },
   "jest": {
     "moduleFileExtensions": [
