--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Actions Docker
 # 트리거를 수행할 브랜치를 지정합니다.
 on:
   push:
-    branches: [ back-deploy ]
+    branches: [ deploy/backend ]
 
 # 환경설정
 env:
