--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,4 +54,4 @@ jobs:
           docker stop ${{ env.NAME }} && docker rm ${{ env.NAME }} && docker rmi ${{ env.DOCKER_IMAGE }}:0.0.1
           docker run -d -p 80:3666 --name ${{ env.NAME }} --restart always ${{ env.DOCKER_IMAGE }}:0.0.1
           docker cp ~/forYourRecipe/backend/.env ${{ env.NAME }}:/app
-          docker stop ${{ env.NAME }} && docker start ${{ env.NAME }}
+#          docker stop ${{ env.NAME }} && docker start ${{ env.NAME }}
