--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@storybook/preset-scss": "^1.0.3",
     "axios": "^0.21.1",
     "core-js": "^3.8.3",
     "firebase": "^9.17.1",
