--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "@storybook/builder-webpack5": "^6.5.16",
     "@storybook/manager-webpack5": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
+    "@storybook/theming": "^7.0.2",
     "@storybook/vue3": "^6.5.16",
     "@types/axios": "^0.14.0",
     "@types/jest": "^27.0.1",
