fix: jest alias update

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -16,9 +16,11 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": "./",
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@components/*": ["./src/components/*"],
+      "@pages/*": ["./src/pages/*"],
+      "@libs/*": ["./src/libs/*"]
     }
   },
   "include": ["src/**/*"],
