--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -12,7 +12,7 @@
   "rules": {
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": "off",
-    "unused-imports/no-unused-imports": "error",
+    //    "unused-imports/no-unused-imports": "off",
     "unused-imports/no-unused-vars": [
       "off"
     ],
