--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,14 @@
   },
   "devDependencies": {
     "@craco/craco": "^7.0.0",
+    "@storybook/addon-essentials": "^7.0.18",
+    "@storybook/addon-interactions": "^7.0.18",
+    "@storybook/addon-links": "^7.0.18",
+    "@storybook/blocks": "^7.0.18",
+    "@storybook/preset-create-react-app": "^7.0.18",
+    "@storybook/react": "^7.0.18",
+    "@storybook/react-webpack5": "^7.0.18",
+    "@storybook/testing-library": "^0.0.14-next.2",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.32",
     "@types/react": "^18.2.7",
@@ -30,16 +38,20 @@
     "babel-plugin-named-exports-order": "^0.0.2",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-storybook": "^0.6.12",
     "eslint-plugin-unused-imports": "^2.0.0",
     "prettier": "^2.7.1",
     "prop-types": "^15.8.1",
+    "storybook": "^7.0.18",
     "webpack": "^5.84.0"
   },
   "scripts": {
     "start": "craco start",
     "build": "craco build",
     "test": "craco test --transformIgnorePatterns \"node_modules/(?!axios)/\"",
-    "eject": "craco eject"
+    "eject": "craco eject",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "browserslist": {
     "production": [
