--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,11 @@
     "sass": "^1.56.1",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@craco/craco": "^7.0.0",
@@ -43,7 +47,9 @@
     "prettier": "^2.7.1",
     "prop-types": "^15.8.1",
     "storybook": "^7.0.18",
-    "webpack": "^5.84.0"
+    "webpack": "^5.84.0",
+    "@types/redux-logger": "^3.0.9",
+    "redux-devtools-extension": "^2.13.9"
   },
   "scripts": {
     "start": "craco start",
