--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -22,7 +22,8 @@
       "@pages/*": ["./src/pages/*"],
       "@libs/*": ["./src/libs/*"],
       "@styles/*": ["./src/styles/*"],
-      "@tests/*": ["./src/__test__/*"]
+      "@tests/*": ["./src/__test__/*"],
+      "@store/*": [".src/store/*"]
     }
   },
   "include": ["src/**/*"],
