feat: utilReducer 추가

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -41,7 +41,7 @@
         "./src/__test__/*"
       ],
       "@store/*": [
-        ".src/store/*"
+        "./src/store/*"
       ],
       "@interfaces/*": [
         "./src/interfaces/*"
