feat: api directory update
# apis 디렉토레에 서비스 관련 로직 분리

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -45,6 +45,9 @@
       ],
       "@interfaces/*": [
         "./src/interfaces/*"
+      ],
+      "@apis/*": [
+        "./src/apis/*"
       ]
     }
   },
