--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -51,6 +51,9 @@
       ],
       "@type/*": [
         "./src/types/*"
+      ],
+      "@utils/*": [
+        "./src/utils/*"
       ]
     }
   },
